--- a/pokedex/neodex/templates/PokemonIndex.html
+++ b/pokedex/neodex/templates/PokemonIndex.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="container-fluid">
+<div class="container-fluid" style="background-image: url(static/background/background.jpg)">
     <div class="row">
         <div class="col-4" color="primary">
                 {% load static %}
@@ -15,6 +15,41 @@
             <p>ID del pokemon: {{detalle.id}}</p>
         </div>
         <div class="col-4">
+            <div class="container-fluid">
+                <canvas id="myChart"></canvas>
+            </div>
+            <script type="text/javascript">
+                $(document).ready(function(){
+
+                    $.ajax({
+                    url:'pokedex/pokedex.csv',
+                    dataType:'text',
+                    contentType:'charset=utf-8'
+                    }).done(grafica);
+
+                    function grafica(data)
+                    {
+                    console.log(data);
+                    
+                        const config = {
+                            type: 'radar',
+                            data: data,
+                            options: {
+                                responsive: true,
+                                plugins: {
+                                    title: {
+                                        display: true,
+                                        text: 'Chart.js Radar Chart'
+                                    }
+                                }
+                            },
+                        };
+                    }
+                }
+                
+
+            </script>
+            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         </div>
     </div>
 </div>
