--- a/pokedex/neodex/templates/PokemonIndex.html
+++ b/pokedex/neodex/templates/PokemonIndex.html
@@ -10,6 +10,10 @@
             <div class="card">
                 <img src="{% get_static_prefix %}pokeimg/{{ detalle.id }}.jpg" alt="{{detalle.Nombre}}">
             </div>
+            <div class="container">
+                <img src="{% get_static_prefix %}pokeimg/{{ detalle.id }}.jpg" alt="{{detalle.Nombre}}">
+                <img src="{% get_static_prefix %}pokeimg/{{ detalle.id }}.jpg" alt="{{detalle.Nombre}}">
+            </div>
             <div class="cointainer-fluid">
                 <div class="row">
                     <div class="col-2">
@@ -25,6 +29,14 @@
                                 {{ detalle.Clasificacion }}
                             </p>
                         </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+
+                    </div>
+                    <div class="col-5">
+
                     </div>
                 </div>
                     
