--- a/pokedex/neodex/templates/index.html
+++ b/pokedex/neodex/templates/index.html
@@ -54,5 +54,6 @@
     </nav>
     {% block content %}
     {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
