--- a/pokedex/neodex/templates/PokemonIndex.html
+++ b/pokedex/neodex/templates/PokemonIndex.html
@@ -86,6 +86,73 @@
                 });
                 </script>
                 <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-4"></div>
+                        <div class="col-4">
+                            <span><p>Debilidades x2</p></span>
+                        </div>
+                        <div class="col-4"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"></div>
+                        <div class="col-4">   
+                            {% if detalle.Contra_Bicho == 2 %}
+                                <img src="{% get_static_prefix %}types/Bicho.gif" alt="Bicho">
+                            {% endif %}
+                            {% if detalle.Contra_Siniestro == 2 %}
+                                <img src="{% get_static_prefix %}types/Siniestro.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Dragon == 2 %}
+                                <img src="{% get_static_prefix %}types/Dragón.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Electrico == 2 %}
+                                <img src="{% get_static_prefix %}types/Electrico.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Hada == 2 %}
+                                <img src="{% get_static_prefix %}types/Hada.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Lucha == 2 %}
+                                <img src="{% get_static_prefix %}types/Lucha.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Fuego == 2 %}
+                                <img src="{% get_static_prefix %}types/Fuego.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Volador == 2 %}
+                                <img src="{% get_static_prefix %}types/Volador.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Fantasma == 2 %}
+                                <img src="{% get_static_prefix %}types/Fantasma.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Planta == 2 %}
+                                <img src="{% get_static_prefix %}types/Planta.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Tierra == 2 %}
+                                <img src="{% get_static_prefix %}types/Planta.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Hielo == 2 %}
+                                <img src="{% get_static_prefix %}types/Hielo.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Normal == 2 %}
+                                <img src="{% get_static_prefix %}types/Normal.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Veneno == 2 %}
+                                <img src="{% get_static_prefix %}types/Veneno.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Psiquico == 2 %}
+                                <img src="{% get_static_prefix %}types/Psiquico.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Roca == 2 %}
+                                <img src="{% get_static_prefix %}types/Roca.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Acero == 2 %}
+                                <img src="{% get_static_prefix %}types/Acero.gif" alt="Siniestro">
+                            {% endif %}
+                            {% if detalle.Contra_Agua == 2 %}
+                                <img src="{% get_static_prefix %}types/Agua.gif" alt="Siniestro">
+                            {% endif %}
+                        </div>
+                        <div class="col-4"></div>
+                    </div>
                     
                 </div>
         </div>
