--- a/pokedex/neodex/static/css/bootstrap.css
+++ b/pokedex/neodex/static/css/bootstrap.css
@@ -628,6 +628,9 @@ progress {
     max-width: 1320px;
   }
 }
+.center{
+  text-align: center;
+}
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
